--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-flash": "git://github.com/RGBboy/express-flash.git",
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.17"
